--- a/src/components/MainLayout/index.css
+++ b/src/components/MainLayout/index.css
@@ -7,11 +7,21 @@
   background: #001529;
 }
 .layout .rightContent {
-  background: #fafafa;
-  /* padding: 0 20px 20px; */
+  background: #f0f2f5;
   flex: 1;
+  overflow-x: auto;
 }
 .layout .mainContent {
-  background: #fafafa;
-  padding: 20px;
+  /* background: #fafafa; */
+  /* padding: 20px; */
+}
+.left-top {
+  color: #fff;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  font-weight: 500;
+  padding: 25px 0 25px;
 }
